# CNF-generators

./: .gitignore  LICENSE  README.md  battleships.py  binary.py  generate_PHP.py  generate_multiplier.py  multiplier_test.py  pyproject.toml  requirements.txt
comp-geo/: line3.py  matn.py  vec3.py
games/: bridges.py  diamond25.py  flow_free.py
input/: p46.txt  p46_soln.txt
input/battleships/: p75.txt
input/bridges/: easy.txt  p72.txt
input/diamond25/: p73.txt
math/: snake-in-box.py
