[project]
name = "CNF-Generators"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Chung",email = "jonathanchung0115@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-sat (>=1.8.dev19,<2.0)",
    "pysat (>=3.2.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
